# online

./: .gitignore  CMakeLists.txt  README.md  common.h  common.pri  easylogging.pri  online.code-workspace  online.pro  revision_info.pri
CCPC7_Server/: CCPC7_Server.pro  camacalgoritm.cpp  camacalgoritm.h  camacserver.cpp  camacserver.h  camacserverhandler.cpp  camacserverhandler.h  camacserversettings.cpp  camacserversettings.h  commandhandler.cpp  commandhandler.h  main.cpp  tempfolder.cpp  tempfolder.h
CCPC7_Server/ccpc/original/: adc8cam.cpp  camacimpl.cpp  camacinterface.cpp  camacinterface.h  camacop.cpp  ccpc6.cpp  ccpcisa.cpp  oemstrings.h
CCPC7_Server/ccpc/virtual/: ccpc7.cpp  ccpc7.h  ccpc7base.h
CamacClient/: CamacClient.pro  camacclientform.cpp  camacclientform.h  camacclientform.ui  ccpc7handler.cpp  ccpc7handler.h  ccpc7handlerform.cpp  ccpc7handlerform.h  ccpc7handlerform.ui  hvhandler.cpp  hvhandler.h  hvhandlerform.cpp  hvhandlerform.h  hvhandlerform.ui  hvmonitor.cpp  hvmonitor.h  main.cpp  online.cpp  online.h  onlineform.cpp  onlineform.h  onlineform.ui  recource.qrc  resource.qrc  serverhandler.cpp  serverhandler.h
DataVisualizer/: DataVisualizer.pro  DataVisualizerForm.ui  DataVisualizerWindow.cpp  DataVisualizerWindow.h  DataVisualizerWindow.ui  apdfiledrawer.cpp  apdfiledrawer.h  customplotzoom.cpp  customplotzoom.h  datavisualizer.pri  datavisualizerform.cpp  datavisualizerform.h  datfiledrawer.cpp  datfiledrawer.h  filedrawer.cpp  filedrawer.h  infofiledrawer.cpp  infofiledrawer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pointfiledrawer.cpp  pointfiledrawer.h  qcustomplot.cpp  qcustomplot.h  voltagefiledrawer.cpp  voltagefiledrawer.h
HV_Server/: HV_Server.pro  comport.cpp  comport.h  dividerreader.cpp  dividerreader.h  hvcontroler.cpp  hvcontroler.h  hvmaincontroller.cpp  hvmaincontroller.h  hvserver.cpp  hvserver.h  hvserverdialog.ui  hvserverhandler.cpp  hvserverhandler.h  main.cpp
Tests/: CCPC7_ServerSettings.ini  CamacClientSettings.ini  HVServerSettings.ini  build.sh
Tests/APD/test10000/: APD_126_10_ev
Tests/APD/test_small/: APD_126_10_ev  block_stat
Tests/APD/test_small2/: setup  setup_raw
Tests/DataSamples/test_session/1/0(20150813180542)/: meta  p0(10s)(HV1=20)  p1(10s)(HV1=80)  p2(5s)(HV1=100)  voltage
Tests/DataSamples/test_session/1/0(20150828153042)/: meta  p0(5s)(HV1=20)  p1(5s)(HV1=40)  scenario  voltage
Tests/DataSamples/test_session/1_0(20150715154820)/: p0(5s)(HV1=-1)(HV2=-1)  p2(15s)(HV1=-1)(HV2=-1)  p3(20s)(HV1=-1)(HV2=-1)  voltage
Tests/DataSamples/test_session/VirtualTest/0(20150828113455)/: meta  p0(5s)(HV1=20)  p1(5s)(HV1=40)  voltage
Tests/DataSamples/test_session/VirtualTest/1(20150828113823)/: meta  p0(5s)(HV1=20)  p1(5s)(HV1=40)  voltage
Tests/DataSamples/test_session/Voltage/0(20150727111958)/: meta  scenario  voltage
Tests/DataSamples/test_session/Voltage/0(20150727112247)/: meta  voltage
Tests/DataSamples/test_session/old/1_0(20150715154820)/: meta  p1(10s)(HV1=-1)(HV2=-1)  scenario
Tests/DataSamples/test_session/old/test_group_0(20150715155114)/: p1(10s)(HV1=80)(HV2=-1)
Tests/DataSamples/test_session/old/test_group_1(20150715155142)/: meta  p0(10s)(HV1=20)(HV2=-1)  p2(5s)(HV1=100)(HV2=-1)
Tests/DataSamples/test_session/old/test_group_2(20150715155223)/: meta  p0(10s)(HV1=20)(HV2=-1)  voltage
Tests/DataSamples/test_session/old/test_group_3(20150715155303)/: meta  p0(10s)(HV1=20)(HV2=-1)  p1(10s)(HV1=80)(HV2=-1)  voltage
Tests/DataSamples/test_session/test_group_0(20150715155114)/: meta  p0(10s)(HV1=20)(HV2=-1)  voltage
Tests/DataSamples/test_session/test_group_1(20150715155142)/: p1(10s)(HV1=80)(HV2=-1)  voltage
Tests/DataSamples/test_session/test_group_2(20150715155223)/: p1(10s)(HV1=80)(HV2=-1)  p2(5s)(HV1=100)(HV2=-1)
Tests/DataSamples/test_session/test_group_3(20150715155303)/: p2(5s)(HV1=100)(HV2=-1)
Tests/TestScripts/: .project  ClientJsonSender.py
Tests/scenarios/: PointsTest(0-5kv 500v step)  SET_VOLTAGE_AND_CHECK_(1000v_main)  SET_VOLTAGE_AND_CHECK_virtual  VoltWithCheck(0 - 10kv, 100v step)  acquire_virtual  acquire_virtual_1p  multipoint.txt
Tests/scenarios/test/: HVMainFastCalibration  HVVoltageSteps  example.cfg  onePoint  pointTest  testVoltages(200v)  testVoltages(200v,no waiting)
Tests/serial_port_test/: mainwindow.cpp  mainwindow.h  mainwindow.ui  serial_port_test.pro
ccpc/: ccpc.pri  ccpccommands.cpp  ccpccommands.h
ccpc/original/: adc8cam.h  adcchanel.h  camacimpl.h  camacop.h  ccpc4.cpp  ccpc4.h  ccpc6.h  ccpc6cam.cpp  ccpc6cam.h  ccpc7.cpp  ccpc7.h  ccpcisa.h  localdropeuid.cpp  localdropeuid.h  main.cpp  oemstrings.cpp
ccpc/virtual/: ccpc7.cpp  ccpc7.h  ccpc7base.cpp
cmake/: git-rev.cmake
common/: common.h  common.pri  recources.qrc  resources.qrc  tempfolder.cpp
common/recources/: styleSheets.qss
documentation/: Doxyfile  documentation.pro  make_graphs.sh
documentation/OnlinePresentation/: .~lock.текст.odt#  OnlinePresentationText  текст.odt
documentation/graphs/: CounterScheme.gv  HVScheme.gv  MainLoop.gv  complex.dot  newMainLoop.gv
documentation/html_extra/: html_style.css
drs-converter/: drs-converter.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
resources/test-scenarios/: 2PU-0-5-step500.conf  2PU-10-20-step100.conf  SET_VOLTAGE_AND_CHECK_step500.conf  acquire_virt-1-10k.conf  one-point-5s.cfg
src/common/: common.h  resources.qrc  tempfolder.h
src/online/: camacclientform.cpp  camacclientform.h  hvhandler.cpp  hvhandler.h  hvhandlerform.cpp  hvhandlerform.h  hvhandlerform.ui  online.cpp  onlineform.cpp  onlineform.h  onlineform.ui
src/tcp/: event.cpp  inimanager.cpp  tcpclient.cpp  tcpprotocol.cpp
tcp/: event.h  inimanager.h  tcp.pri  tcpbase.cpp  tcpbase.h  tcpclient.cpp  tcpclient.h  tcpprotocol.cpp  tcpprotocol.h  tcpserver.cpp  tcpserver.h
